app/assets/stylesheets/pages/home/_history.scss
section#history {
  background: map-get($mex, blue);
  height: 100%;
  width: 100%;
  position: relative;
  
  div#history-track {
    position: absolute;
    top: 30px;
    left: 30px;
    background: transparent;
    height: calc(100% - 60px);
    width: 20px;
    // transform: translateX(-50%);
    border: 4px solid white;
    // border-radius: 15px;
    
    @include transform(translateX(-50%));
    @include border-radius(15px);
  
    div#history-track-detents {
      span {
      position: absolute;
      // (track width - (track border * 2)) / 2
      left: 6px;
      background: transparent;
      height: 10px;
      width: 10px;
      // transform: translate(-50%, -50%);
      border: 2px solid white;
      // border-radius: 50%;
      z-index: 1;
      
      @include transform(translate(-50%, -50%));
      @include border-radius(50%);
      }
    }
  }
  
  div#history-slider {
    position: absolute;
    top: 30px;
    left: 30px;
    background: white;
    height: 40px;
    width: 40px;
    // transform: translate(-50%, -50%);
    border: 4px solid white;
    // border-radius: 50%;
    cursor: pointer;
    z-index: 1;
    
    @include user-select(none);
    @include transform(translate(-50%, -50%));
    @include border-radius(50%);
  }
  
  div#history-cards {
    position: absolute;
    width: 100%;
    height: 100%;
    color: white;
    
    div.history-card {
      position: absolute;
      // 100% - track left * 3
      width: calc(100% - 90px);
      height: calc(100% - 60px);
      left: 110%;
      top: 110%;
      // border: 4px solid white;
      padding: 10px;
      
      @include transition(all, 1s, $normal-bezier, 0s);
      @include border-radius(8px);
      
      div.history-card-head {
        @include display-flex;
        @include align-items(center);
        position: relative;
        height: 15%;
        width: 100%;
        font-size: 60px;
        border-bottom: 4px solid white;
        
        @include respond-to(phone) { font-size: 30px; }
        
        span {
          display: block;
          width: 100%;
          text-align: center;
          position: relative;
        }
      }
      
      div.history-card-body {
        @include display-flex;
        @include align-items(flex-start);
        position: relative;
        height: 85%;
        width: 100%;
        padding: 10px;
        font-size: 30px;
        
        @include respond-to(phone) { font-size: 15px; }
      }
      
      &.focus {
        // (track left - track width / 2) + track width + (track left - track width / 2)
        left: 60px;
        top: 30px;
      }
      
      &.away {
        left: 110%;
        top: -110%;
      }
    }
  }
}

